@@ -6,7 +6,7 @@ Dancer::Plugin::Adapter - Wrap any simple class as a service for Dancer
 
 =head1 VERSION
 
-version 0.002
+version 0.003
 
 =head1 SYNOPSIS
 
@@ -16,6 +16,7 @@ version 0.002
     Adapter:
       ua:
         class: HTTP::Tiny
+        scope: request
         options:
           max_redirect: 3
 
@@ -51,6 +52,7 @@ In your config.yml, you put this:
     Adapter:
       postmark:
         class: WWW::Postmark
+        scope: singleton
         options: POSTMARK_API_TEST
 
 In your production config.yml, you can replace 'POSTMARK_API_TEST' with your
@@ -83,6 +85,30 @@ One or more objects are defined by C<< NAME => HASHREF >> pairs.  The hash
 reference for each NAME must contain a 'class' key, whose value is the class
 to wrap.
 
+The 'scope' key determines how long the generated object persists.  The choice
+of scope will depend on whether the object holds onto any state that should not
+last across requests or users.  The following scope values are allowed:
+
+=over 4
+
+=item *
+
+C<request> -- (default) the object persists in the C<vars> hash for the duration of the request
+
+=item *
+
+C<singleton> -- the objects persists in a private, lexical hash for the duration of the process
+
+=item *
+
+C<session> -- the object persists in the C<session> hash for the duration of the session
+
+=item *
+
+C<none> -- the object is not cached; a fresh object is created on each call
+
+=back
+
 If the hash reference contains an 'options' key, its value will be dereferenced
 (if it is a hash or array reference) and passed to C<new()> when the object is
 created.  Note that if the class requires a reference for the constructor,
@@ -93,6 +119,7 @@ you have to wrap it in an extra array.  E.g.
     Adapter:
       foo:
         class: Foo::Bar
+        scope: request 
         options:
           -
             wibble: wobble
@@ -114,15 +141,18 @@ can be specified with the 'constructor' key.
   # constructor called as:
   File::Temp->newdir()
 
+When caching under C<request> or C<session> scope, Dancer::Plugin::Adaptor uses
+the key C<_dpa> in the C<vars> or C<session> hash, respectively.
+
 =head1 USAGE
 
 =head2 service
 
-  service($name);
+  $object = service($name);
 
-This function returns the object corresponding to the name defined in
-the configuration file.  The object is created on demand and cached
-for future use.
+This function returns the object corresponding to the name defined in the
+configuration file.  The object is created on demand and may be cached for
+future use based on its C<scope> configuration option.
 
 =head1 SEE ALSO
 
@@ -137,6 +167,10 @@ L<Dancer>
 L<Dancer::Plugin>
 
 =back
+
+=head1 ACKNOWLEDGMENTS
+
+Thank you to Matt S. Trout for suggesting the 'scope' controls.
 
 =for :stopwords cpan testmatrix url annocpan anno bugtracker rt cpants kwalitee diff irc mailto metadata placeholders metacpan
 
